deploy/components/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  creationTimestamp: null
  name: eyal-test-3-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: eyal-test-3.cluster.koalaops.com
    http:
      paths:
      - backend:
          service:
            name: eyal-test-3-service
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - eyal-test-3.cluster.koalaops.com
    secretName: eyal-test-3-tls-cert
status:
  loadBalancer: {}
